# waybackproxy

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  config.sample.json  pyproject.toml  requirements.txt  setup.py  whitelist.txt
assets/: box_rpi4.stl  cap_rpi4.stl  case_parts.md  knob.stl  wiring_diagram.cdr
scripts/: disable-gateway.sh  install.sh  setup-gateway.sh  verify-installation.sh
src/waybackproxy/: __init__.py  __main__.py
src/waybackproxy/config/: __init__.py  loader.py  settings.py
src/waybackproxy/core/: __init__.py  cache.py  handler.py  proxy.py
src/waybackproxy/hardware/: __init__.py  base.py  display.py  gpio.py  lcd.py
src/waybackproxy/ui/: __init__.py  controller.py  date_selector.py  input.py
src/waybackproxy/utils/: __init__.py  logging.py  lru.py  network.py
